# cowrie

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  release.sh  worklog.md
.github/workflows/: ci.yml  fuzz.yml
benchmarks/: README.md  RESULTS.md  bench_decode_c  bench_decode_c.c  bench_decode_python.py  bench_decode_ts.ts  bench_go.go  bench_python.py  generate_fixtures.go  run_all.sh
benchmarks/fixtures/: floats.gen2  floats.json  large.gen1  large.gen2  large.json  medium.gen1  medium.gen2  medium.json  small.gen1  small.gen2  small.json
c/: CMakeLists.txt
c/glyph/include/: glyph.h
c/glyph/src/: glyph.c
c/include/: cowrie_gen1.h  cowrie_gen2.h  cowrie_json.h  sjson_gen1.h  sjson_gen2.h  sjson_json.h
c/src/: gen1.c  gen2.c  json.c
c/tests/: test_gen1.c  test_gen2.c  test_json.c  test_mutation.c  test_truth_table.c
c/tools/: decode_stdin.c
docs/glyph/: AGENTS.md  API_REFERENCE.md  COOKBOOK.md  GUIDE.md  QUICKSTART.md  README.md  SPECIFICATIONS.md
go/: accessor_coverage_test.go  any_api.go  any_api_test.go  bench_decode_test.go  benchmark_test.go  column_reader.go  compat_test.go  compress.go  coverage_boost2_test.go  cross_format_roundtrip_test.go  decode.go  decode_coverage_test.go  deterministic_test.go  doc.go  encode.go  encode_any_coverage_test.go  encode_deep_test.go  encode_writer.go  fixtures_test.go  gen2_test.go  go.mod  hints.go  hints_test.go  invariant_test.go  json.go  json_coverage_test.go  new.go  new_coverage_test.go  perf_cliff_test.go  schema.go  schema_coverage_test.go  schema_fingerprint_test.go  schema_test.go  security_test.go  spec_test.go  tensor_compression_test.go  truth_table_test.go  types.go  types_coverage_test.go  v21_test.go  (+5 more)
go/codec/: bench_enterprise_test.go  bench_test.go  codec.go  codec_test.go  compat_test.go  compress.go  coverage_boost_test.go  cowrie.go  cowrie_master_stream.go  encode_fast.go  encode_fast_test.go  fuzz_test.go  golden_test.go  json.go  master_stream_test.go  race_test.go  reflect_cache.go  registry.go  registry_test.go  roundtrip_test.go  safety_test.go  security_test.go  stream.go  stream_test.go  tensor.go  tensor_coverage_test.go  tensor_trust_test.go  test_helpers_test.go  unmarshal.go  unmarshal_coverage_test.go  unmarshal_test.go
go/delta/: apply.go  coverage_test.go  delta_test.go  diff.go  store.go
go/dicts/: ml_dict.go  ml_dict_test.go
go/gen1/: coverage_test.go  doc.go  gen1.go  gen1_deep_test.go  gen1_encode_test.go  gen1_test.go  varint_simd.go  varint_simd_test.go
go/gen2/: any_api.go  column_reader.go  compress.go  decode.go  deterministic_test.go  doc.go  encode.go  fixtures_test.go  gen2_test.go  hints.go  json.go  new.go  schema.go  types.go  view.go
go/glyph/: auto_pool_coverage_test.go  bridge.go  bridge_coverage_test.go  bridge_deep_test.go  canon_coverage_test.go  coverage_boost_test.go  cross_impl_test.go  emit_coverage_test.go  emit_patch_coverage_test.go  glyph_deep_test.go  glyph_test.go  json_bridge_coverage_test.go  json_bridge_deep_test.go  loose_bench_test.go  loose_coverage_test.go  loose_deep_test.go  loose_extra_test.go  loose_test.go  patch_builder_test.go  roundtrip_deep_test.go  savings_benchmark_test.go  schema_coverage_test.go  stream_validator.go  streaming.go  token.go  types_coverage_test.go  validate_coverage_test.go  validate_deep_test.go
go/gnn/: README.md  auxiliary.go  benchmark_comparison_test.go  container.go  edge_table.go  feature.go  file_helpers.go  gnn_test.go  graphrag.go  graphrag_test.go  node_table.go  sections.go  sections_test.go  split.go  types.go  v11_test.go
go/graph/: coverage_boost_test.go  frame.go  frame_coverage_test.go  graph_test.go  stream.go  types.go
go/intern/: pool.go  pool_test.go
go/ld/: README.md  context.go  coverage_boost_test.go  coverage_test.go  decode.go  encode.go  ld_deep_test.go  ld_test.go  types.go  vocab.go  vocab_test.go
go/testdata/: adjlist_3node_4edge.cowrie  array_mixed_v21.cowrie  audio_pcm16_44100_stereo.cowrie  delta_3ops.cowrie  go_audio.cowrie  go_delta.cowrie  go_image.cowrie  go_rich_text.cowrie  go_tensor.cowrie  go_tensor_ref.cowrie  image_jpeg_640x480.cowrie  object_with_tensor.cowrie  rich_text_plain.cowrie  rich_text_with_tokens_spans.cowrie  tensor_ref.cowrie
go/ucodec/: delta_pred.go  delta_pred_test.go  sparse.go  sparse_test.go
posts/: 00-elevator-pitches.md  00-ideal-customer-profile.md  00-market-analysis.md  00-playbook.md  00-release-checklist.md  00-storage-cost-analysis.md  00-target-company-profiles.md  01-blog-devto.md  02-show-hn.md  03-reddit.md  04-github-release.md  05-twitter-thread.md
python/: pyproject.toml
python/cowrie/: __init__.py  gen1.py  gen2.py
python/glyph/glyph_serial.egg-info/: PKG-INFO  SOURCES.txt
python/sjson/: __init__.py  gen1.py  gen2.py
python/tests/: test_fixtures_core.py  test_gen1.py  test_gen2.py  test_hypothesis.py  test_mutation.py  test_truth_table.py
rust/: Cargo.toml
rust/benches/: decode_bench.rs
rust/examples/: decode_stdin.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_roundtrip.rs
rust/glyph-codec/glyph-codec/: Cargo.toml
rust/glyph-codec/glyph-codec/src/: lib.rs  loose.rs
rust/src/: lib.rs
rust/src/gen1/: mod.rs
rust/src/gen2/: compress.rs  decode.rs  encode.rs  json.rs  master_stream.rs  mod.rs  schema.rs  types.rs
rust/tests/: coverage_boost.rs  fixtures_core.rs  golden_tests.rs  mutation.rs  perf_cliff.rs  truth_table.rs
testdata/fixtures/: manifest.json
testdata/gen1/: basic.cowrie  basic.json  embedding.cowrie  embedding.json  nested.json  nested.sjson
testdata/gen2/: deterministic.cowrie  deterministic.sjson.fingerprint  empty.sjson  floats.cowrie  image_meta.cowrie  image_meta.json  integers.cowrie  mixed_array.sjson  nested.sjson  primitives.sjson  schema1.cowrie  schema1.cowrie.fingerprint  schema2.sjson  tensor.json  tensor.sjson
testdata/robustness/: differential_runner.py
testdata/security/: README.md  generate_vectors.py
tools/fixtures/: validate_manifest.py
typescript/: package-lock.json  package.json  tsconfig.json
(+126 files in other folders)
