[package]
name = "cowrie-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cowrie-rs]
path = ".."

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false

[workspace]
members = ["."]
